# crusty-chip

./: .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
sfml/: .gitignore  Cargo.toml  README.md  rustfmt.toml
sfml/src/: main.rs
src/: crustychip.rs  lib.rs  ops.rs
