[package]

name = "crusty-chip-sfml"
version = "0.1.0"
authors = [ "radiantstatue@gmail.com" ]
edition = "2018"

[dependencies.crusty_chip]
path = "../"

[dependencies]
sfml = { git = "https://github.com/jeremyletang/rust-sfml.git" }
getopts = "0.2.21"

[profile.release]
panic = "abort"
codegen-units = 1
