[package]

name = "crusty-chip-sfml"
version = "0.1.0"
authors = [ "radiantstatue@gmail.com" ]
edition = "2021"

[dependencies.crusty_chip]
path = "../"

[dependencies]
sfml = { git = "https://github.com/jeremyletang/rust-sfml.git" }
egui-sfml = { git = "https://github.com/crumblingstatue/egui-sfml.git", version = "0.1.0" }
getopts = "0.2.21"
